# LabelAnything

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  SAMDCAMA_prompts_N1K1.yaml  app.py  checkpoints  clip_extract_exe_single  clip_extract_single  dino.py  extract  extract_exe_single  extract_params.yaml  fss_peft.py  index.html  label-anything.yml  launch_experiment  launch_experiment_exe  launch_run  launch_run_exe  launch_run_single  launch_test  launch_validate  launch_validate_exe  logger.py  lora.yaml  lora2.yaml  lora3.yaml  lora_incremental.yaml  lora_la.yaml  lorafss.yml  main.py  main_lora.py  parameters.yaml  parameters.yml  parameters_coco20i_fss.yaml  parameters_half.yaml  parameters_mix.yaml  parameters_rmi.yaml  (+21 more)
data/: setup_voc12.sh
docs/: Makefile  conf.py  index.rst  make.bat
label_anything/: __init__.py  __main__.py  argpass.py  cli.py  experiment.py  loss.py  metrics.py  parameters.py  preprocess.py  preprocess_clip.py  resume.py  save.py  scheduler.py  streamlit.py  substitution.py  train_model.py
lora/: sample.py  substitutor.py  utils.py  validate.py
notebooks/: area_focus.ipynb  brain.ipynb  check_dataset copy.ipynb  check_dataset.ipynb  check_dataset_pascal.ipynb  chooser.ipynb  dram.ipynb  embeddings_show.ipynb  kvaris.ipynb  medicine.ipynb  nways.ipynb  push_to_hub.ipynb  test_dataset_eda.ipynb  test_log.ipynb  visualize.ipynb  visualize.py  voc12.ipynb  voc_mask.ipynb
parameters/: 1_NewTraining.yaml  2.5_NewTraining_Focal.yaml  2.8_NewTraining_Focal.yaml  2.9.1_NewTraining.yaml  2.9.2_NewTraining_sub.yaml  2.9.3_NewTraining_MAE.yaml  2.9_NewTraining_Focal.yaml  2_NewTraining.yaml  3_NewTraining_ViT.yaml  4.1_Affinity.yaml  4.2.1_Affinity_MAE.yaml  4.2_Affinity.yaml  4.3.1_AFClass_MAE.yaml  4.3_AFClass_SAM.yaml  (+36 more)
(+430 files in other folders)
