[project]
name = "label_anything"
version = "0.1.0"
description = "LabelAnything: Multi-Class Few-Shot Semantic Segmentation with Visual Prompts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "captum>=0.8.0",
    "colorlog>=6.9.0",
    "dropblock>=0.3.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.1",
    "nicegui>=2.21.1",
    "opencv-python>=4.11.0.86",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "streamlit>=1.45.0",
    "streamlit-drawable-canvas>=0.9.3",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wandb>=0.19.10",
    "wget>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["label_anything*"]


[project.scripts]
app = "label_anything.demo.nicegui:main"
